Add method params