@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'inga'
-version '0.1.4'
+version '0.1.5'
 
 jar {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
@@ -36,6 +36,7 @@ dependencies {
 }
 
 def args = [
+        '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
 ]
